--- a/index.html
+++ b/index.html
@@ -477,24 +477,24 @@
 
         <div class="row text-center">
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <a href="https://www.mozilla.org/en-US" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive  align-css" width="200" src="assets/media/sponsors/mozilla.jpg" alt="mozilla"/>
-                    <p style="margin-top:40px;">Open Source Sponsor</p>
-                </a>
+              <a href="https://codingblocks.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.png" alt="Coding Blocks"/>
+                  <p>Platinum Sponsor</p>
+              </a>
             </div><!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <a href="https://developers.facebook.com/developercircles/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive" width="200" src="assets/media/sponsors/developer_circle.png" alt="developer circle"/>
-                    <p style="margin-top:42px;">Community Partner</p>
-                </a>
+              <a href="https://gitlab.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/gitlab.png" alt="GitLab"/>
+                  <p style="margin-top:14px">Diversity Sponsor</p>
+              </a>
             </div><!-- Col 2 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <a href="http://hacksociety.tech/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive" width="200" src="assets/media/sponsors/hacksociety.png" alt="hacksociety"/>
-                    <p>Hackathon Partner</p>
-                </a>
+              <a href="https://balsamiq.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/balasmiq.png" alt="balsamiq"/>
+                  <p>Silver Sponsor</p>
+              </a>
             </div><!-- Col 3 end -->
 
         </div><!--/ Content row 1 end -->
@@ -502,71 +502,71 @@
         <div class="row text-center">
 
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="200" style="margin-left:20px" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
-                  <p>Open Source and Diversity Partner</p>
-              </a>
+            <a href="https://www.mozilla.org/en-US" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive  align-css" width="200" src="assets/media/sponsors/mozilla.jpg" alt="mozilla"/>
+                <p style="margin-top:40px;">Open Source Sponsor</p>
+            </a>
           </div><!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <a href="https://www.jetbrains.com/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive" width="200" src="assets/media/sponsors/Jetbrains.png" alt="jetbrains"/>
-                    <p>IDE Sponsor</p>
-                </a>
+              <a href="https://developers.facebook.com/developercircles/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive" width="200" src="assets/media/sponsors/developer_circle.png" alt="developer circle"/>
+                  <p style="margin-top:42px;">Community Partner</p>
+              </a>
             </div><!-- Col 2 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <a href="https://gitlab.com/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive " width="200" src="assets/media/sponsors/gitlab.png" alt="GitLab"/>
-                    <p style="margin-top:14px">Diversity Sponsor</p>
-                </a>
+              <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
+                  <p style="margin-top:32px">Powered By</p>
+              </a>
             </div><!-- Col 3 end -->
 
         </div><!-- Content row 2 end -->
         <div class="row text-center">
 
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://balsamiq.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="200" src="assets/media/sponsors/balasmiq.png" alt="balsamiq"/>
-                  <p>Silver Sponsor</p>
-              </a>
+            <a href="http://hacksociety.tech/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive" width="200" src="assets/media/sponsors/hacksociety.png" alt="hacksociety"/>
+                <p>Hackathon Partner</p>
+            </a>
           </div><!-- Col 1 end -->
 
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
-                  <p>VC Support</p>
-              </a>
+            <a href="https://www.get.tech/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive align-css" width="200" src="assets/media/sponsors/tech.png" alt=".tech"/>
+                <p>Domain Sponsor</p>
+            </a>
           </div><!-- Col 2 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <a href="https://www.get.tech/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive align-css" width="200" src="assets/media/sponsors/tech.png" alt=".tech"/>
-                    <p>Domain Sponsor</p>
-                </a>
+              <a href="https://www.jetbrains.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive" width="200" src="assets/media/sponsors/Jetbrains.png" alt="jetbrains"/>
+                  <p>IDE Sponsor</p>
+              </a>
             </div><!-- Col 3 end -->
 
         </div><!-- Content row 3 end -->
 
         <div class="row text-center">
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
-                  <p style="margin-top:32px">Powered By</p>
+              <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive align-css" style="margin-top:100px" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
+                  <p>Platform Sponsor</p>
               </a>
           </div><!-- Col 1 end -->
 
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive align-css" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
-                  <p style="margin-top:56px">Platform Sponsor</p>
-              </a>
+            <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
+                <p>VC Support</p>
+            </a>
           </div><!-- Col 2 end -->
 
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <a href="https://codingblocks.com/" target="_blank" class="sponsor-logo highlight">
-                <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.png" alt="Coding Blocks"/>
-                <p>Platinum Sponsor</p>
+            <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive" width="200" style="margin-left:10px;" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
+                <p>Open Source and Diversity Partner</p>
             </a>
           </div><!-- Col 3 end -->
         </div><!-- Content row 4 end -->
@@ -574,14 +574,14 @@
         <div class="row text-center">
             <div class="col-xs-12 col-sm-4 col-md-4">
               <a href="https://zulipchat.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="144" src="assets/media/sponsors/zulip.png" alt="Zulip"/>
+                  <img class="img-responsive " width="120px" src="assets/media/sponsors/zulip.png" alt="Zulip"/>
                   <p>Chat Partner</p>
                 </a>
             </div><!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
               <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="200" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
+                  <img class="img-responsive " width="160" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
                   <p>Education Partner</p>
               </a>
              </div><!-- Col 2 end -->
@@ -593,49 +593,61 @@
 
       <div class="row text-center">
         <h3 class="sponsor-title">Patrons</h3>
-        <div class="col-xs-12 col-sm-3 col-md-3">
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <a class="sponsor-logo">
-                <img class="img-responsive " style="margin-top:110px" src="assets/media/sponsors/temboo.png" alt="temboo" />
+                <img class="img-responsive" width="200px" style="margin-top:60px" src="assets/media/sponsors/temboo.png" alt="temboo" />
             </a>
         </div><!-- Col 1 end -->
 
-        <div class="col-xs-12 col-sm-3 col-md-3">
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <a class="sponsor-logo">
-                <img class="img-responsive" src="assets/media/sponsors/digitalocean.png" alt="digitalocean" />
+                <img class="img-responsive"  width ="200px" src="assets/media/sponsors/digitalocean.png" alt="digitalocean" />
             </a>
         </div><!-- Col 2 end -->
 
-        <div class="col-xs-12 col-sm-3 col-md-3">
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <a class="sponsor-logo">
-                <img class="img-responsive" style="margin-top:70px" src="assets/media/sponsors/oyo.gif" alt="oyo" />
+                <img class="img-responsive" width="200px" style="margin-top:40px" src="assets/media/sponsors/oyo.gif" alt="oyo" />
             </a>
         </div><!-- Col 3 end -->
 
-        <div class="col-xs-12 col-sm-3 col-md-3">
-            <a class="sponsor-logo">
-                <img class="img-responsive" style="margin-top:40px" src="assets/media/sponsors/inkmonk.png" alt="inkmonk" />
-            </a>
-        </div><!-- Col 4 end -->
     </div><!--/ Content row 1 end -->
     <div class="row text-center">
-        <div class="col-xs-12 col-sm-3 col-md-4">
+      <div class="col-xs-12 col-sm-4 col-md-4">
+          <a class="sponsor-logo">
+              <img class="img-responsive" width="200px" style="margin-top:-60px" src="assets/media/sponsors/inkmonk.png" alt="inkmonk" />
+          </a>
+      </div><!-- Col 1 end -->
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <a class="sponsor-logo">
-                <img class="img-responsive" style="margin-top:20px" src="assets/media/sponsors/wolframalpha.png" alt="WolframAlpha" />
+                <img class="img-responsive" width="200px" style="margin-top:20px" src="assets/media/sponsors/wolframalpha.png" alt="WolframAlpha" />
             </a>
-        </div><!-- Col 1 end -->
+        </div><!-- Col 2 end -->
 
-        <div class="col-xs-12 col-sm-3 col-md-4">
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <a class="sponsor-logo">
                 <img class="img-responsive" style="margin-top:20px;" width="150px" src="assets/media/sponsors/npm.png" alt="npm" />
             </a>
-        </div><!-- Col 2 end -->
-
-        <div class="col-xs-12 col-sm-3 col-md-4">
-            <a class="sponsor-logo">
-                <img class="img-responsive" style="margin-top:-50px" width="200px" src="assets/media/sponsors/startupSuccess.jpg" alt="Startup Success Stories" />
-            </a>
         </div><!-- Col 3 end -->
-    </div><!--/ Content row 2 end -->
+    </div><!-- Content row 2 end -->
+
+    <div class="row text-center">
+      <div class="col-xs-12 col-sm-4 col-md-4">
+          <a class="sponsor-logo">
+              <img class="img-responsive" width="200px" style="margin-top:-40px" src="assets/media/sponsors/startupSuccess.jpg" alt="Startup Success Stories" />
+          </a>
+      </div><!-- Col 1 end -->
+      <div class="col-xs-12 col-sm-4 col-md-4">
+          <a class="sponsor-logo">
+              <img class="img-responsive" width="200px" src="assets/media/sponsors/challengeRocket.jpeg" alt="Challenge Rocket" />
+          </a>
+      </div><!-- Col 1 end -->
+      <div class="col-xs-12 col-sm-4 col-md-4">
+          <a class="sponsor-logo">
+              <img class="img-responsive" width="200px" src="assets/media/sponsors/revDebug.png" alt="RevDebug" />
+          </a>
+      </div><!-- Col 1 end -->
+    </div><!-- Content row 3 end -->
 
 
     <div class="row">
